# PCx-C

./: .gitignore  COPYRIGHT  LICENSE  Makefile  Makefile.am  Makefile.in  PCx-C.sublime-project  PCx-C.sublime-workspace  README.md  build  configure  configure.ac  configure.scan  pcxarch
F2C/: Makefile.in  dtime_.c  etime_.c  extra_defs.h  f2c.h  fmt.c  fmt.h  inquire.c  makefile  open.c  rsli.c  sfe.c
MAKEARCH/: IRIX.make  sun4.make  t3d.make
Ng-Peyton/: Makefile  Makefile.in  ordmmd.c
SRC/: Makefile  Makefile.in  Ng-Peyton.c  NgPeyton.c  NgPeyton.h  PCx.c  io.c  lpmps.c  main.c  main.h  memory.c  memory.h  parameters.c  presolve.c  readmps.c  scale.c  solve.c  solver.h  split.c  test.c  writemps.c
mex/: Makefile2
